--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=CICD POC
+appTitle=CICD POC BTP traing
 
 #YDES: Application description
 appDescription=A Fiori application.
