--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=CICD POC BTP traing
+appTitle=CICD POC BTP traing for COe
 
 #YDES: Application description
 appDescription=A Fiori application.
